# game-of-life-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
include/: Game.h
src/: Game.cpp  main.cpp
